--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "angular": ">=1.2.*",
     "angular-bootstrap": "~0.11.0",
     "angular-cookies": "1.3.18",
+    "angular-material": "~0.11.0",
     "angular-resource": ">=1.2.*",
     "angular-sanitize": ">=1.2.*",
     "angular-socket-io": "~0.6.0",
@@ -14,7 +15,8 @@
     "font-awesome": ">=4.1.0",
     "jquery": "~1.11.0",
     "json3": "~3.3.1",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "md-chips-select": "~0.0.9"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
